# Muffin

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  README_zh.md  conanfile.py  conanfile.txt  example.md  package-lock.json  package.json  test.md
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  icons.qrc  image_icons.qrc  katex_fonts.qrc  main.cpp  statusbar_icons.qrc  table_toolbar_icons.qrc  translations.qrc  tree_sitter_queries.qrc
src/app/: Application.cpp  Application.h  CommandRegistry.cpp  CommandRegistry.h  DocumentSession.cpp  DocumentSession.h  EditorBackend.h  LanguageManager.cpp  LanguageManager.h  MainWindow.cpp  MainWindow.h  MainWindowActionBinder.cpp  MainWindowActionBinder.h  MainWindowActions.cpp  MainWindowFileOps.cpp  MainWindowFind.cpp  MainWindowMenus.cpp  MainWindowSignalBinder.cpp  MainWindowSignalBinder.h  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesPage.cpp  PreferencesPage.h  PrefsAppearancePage.cpp  PrefsAppearancePage.h  PrefsEditorPage.cpp  PrefsEditorPage.h  PrefsExportPage.cpp  PrefsExportPage.h  PrefsFilesPage.cpp  PrefsFilesPage.h  PrefsGeneralPage.cpp  PrefsGeneralPage.h  PrefsImagePage.cpp  PrefsImagePage.h  PrefsMarkdownPage.cpp  PrefsMarkdownPage.h  RenderCommandFacade.cpp  RenderCommandFacade.h  RenderEditorBackend.cpp  (+7 more)
src/commands/: ParagraphController.cpp  ParagraphController.h  StylizeController.cpp  StylizeController.h
src/core/: Document.cpp  Document.h  FileManager.cpp  FileManager.h  MdDocument.cpp  MdDocument.h  MdNode.cpp  MdNode.h  MdParser.cpp  MdParser.h  MdSerializer.cpp  MdSerializer.h  SourceMap.cpp  SourceMap.h
src/document/: DefinitionBlock.cpp  DefinitionBlock.h  DocumentSession.cpp  DocumentSession.h  InlineNode.cpp  InlineNode.h  InlineProjection.cpp  InlineProjection.h  InlineSourceMap.cpp  InlineSourceMap.h  LineStartOffsetCache.cpp  LineStartOffsetCache.h  MarkdownDocument.cpp  MarkdownDocument.h  MarkdownNode.cpp  MarkdownNode.h  MarkdownTypes.h  NodeId.cpp  NodeId.h  NodeIndex.cpp  NodeIndex.h  OutlineBuilder.cpp  OutlineBuilder.h  PendingBlockMarker.cpp  PendingBlockMarker.h  SelectionSerializer.cpp  SelectionSerializer.h  SourceRange.h  SourceRangeUtil.cpp  SourceRangeUtil.h  TextSelection.h  TopLevelRangeChange.h
src/edit/: EditTransaction.cpp  EditTransaction.h  UndoStack.cpp  UndoStack.h
src/editor/: BlockEditContext.cpp  BlockEditContext.h  BrushQueue.cpp  BrushQueue.h  ClipboardController.cpp  ClipboardController.h  CodeLanguageEditor.cpp  CodeLanguageEditor.h  CursorPosition.h  EditTransaction.h  EditTransactionApplier.cpp  EditTransactionApplier.h  EditTransactionValidator.cpp  EditTransactionValidator.h  EditorContext.cpp  EditorContext.h  EditorContextHolder.h  EditorController.cpp  EditorController.h  EditorControllerUndo.cpp  EditorSelectionMapper.cpp  EditorSelectionMapper.h  EditorView.cpp  EditorView.h  FindBarWidget.cpp  FindBarWidget.h  HeadingCommandHandler.cpp  HeadingCommandHandler.h  InlineSplit.h  InputController.cpp  InputController.h  InputControllerEdit.cpp  ListCommandHandler.cpp  ListCommandHandler.h  MarkdownCommand.cpp  MarkdownCommand.h  MarkdownEditEngine.cpp  MarkdownEditEngine.h  MarkdownEditor.cpp  MarkdownEditor.h  (+30 more)
src/html/: HtmlBox.cpp  HtmlBox.h  HtmlBoxBuilder.cpp  HtmlBoxBuilder.h  HtmlLayoutEngine.cpp  HtmlLayoutEngine.h  HtmlLayoutResult.cpp  HtmlLayoutResult.h  HtmlParser.cpp  HtmlParser.h  HtmlRenderer.cpp  HtmlRenderer.h  HtmlStyleResolver.cpp  HtmlStyleResolver.h  HtmlTextMeasurer.cpp  HtmlTextMeasurer.h  InlineHtmlRenderer.cpp  InlineHtmlRenderer.h
src/io/: FileController.cpp  FileController.h  ImageFileOps.cpp  ImageFileOps.h
src/math/: MathBuilder.cpp  MathBuilder.h  MathBuilderArray.cpp  MathBuilderSpacing.cpp  MathDelimiter.cpp  MathDelimiter.h  MathDimension.cpp  MathDimension.h  MathFontMetrics.cpp  MathFontMetrics.h  MathFontRegistry.cpp  MathFontRegistry.h  MathFunctionRegistry.cpp  MathFunctionRegistry.h  MathLayoutTree.cpp  MathLayoutTree.h  MathLexer.cpp  MathLexer.h  MathMacroExpander.cpp  MathMacroExpander.h  MathOptions.cpp  MathOptions.h  MathParseError.cpp  MathParseError.h  MathParseNode.h  MathParser.cpp  MathParser.h  MathParserEnvironment.cpp  MathRenderNode.cpp  MathRenderNode.h  MathRenderer.cpp  MathRenderer.h  MathSettings.cpp  MathSettings.h  MathStyle.cpp  MathStyle.h  MathSvgGeometry.cpp  MathSvgGeometry.h  MathSymbols.cpp  MathSymbols.h
src/model/: BlockDocumentMerger.cpp  BlockDocumentMerger.h  MarkdownDocument.cpp  MarkdownDocument.h  MarkdownMathSpanBuilder.cpp  MarkdownMathSpanBuilder.h  MarkdownNode.cpp  MarkdownNode.h  MarkdownSerializer.cpp  MarkdownSerializer.h  MarkdownSourceSpanUpdater.cpp  MarkdownSourceSpanUpdater.h  MarkdownTransform.cpp  MarkdownTransform.h
src/parser/: AstNode.h  AstTree.h  BlockReparsePlanner.cpp  BlockReparsePlanner.h  BlockReparser.cpp  BlockReparser.h  CmarkGfmParser.cpp  CmarkGfmParser.h  CmarkNodeAdapter.cpp  CmarkNodeAdapter.h  CmarkParser.cpp  CmarkParser.h  MarkdownParser.h  MarkdownSerializer.cpp  MarkdownSerializer.h  MathDelimiterScanner.cpp  MathDelimiterScanner.h  MathSpan.h  SourceCoordinateMapper.cpp  SourceCoordinateMapper.h  SourceSpan.h
src/projection/: InlineProjection.cpp  InlineProjection.h  SelectionSerializer.cpp
src/render/: BlockLayout.cpp  BlockLayout.h  BlockLayoutBuilder.cpp  BlockLayoutBuilder.h  CodeHighlight.h  DocumentLayout.cpp  DocumentLayout.h  ImageDecoder.cpp  ImageDecoder.h  ImageLoader.cpp  ImageLoader.h  ImagePlaceholder.cpp  ImagePlaceholder.h  InlineLayout.cpp  InlineLayout.h  MarkdownRenderWidget.cpp  MarkdownRenderWidget.h  TreeSitterHighlighter.cpp  TreeSitterHighlighter.h
src/renderer/: DocumentRenderer.cpp  DocumentRenderer.h  IncrementalRenderValidationPolicy.cpp  IncrementalRenderValidationPolicy.h  MarkdownBlock.h  MarkerFragmentIndex.cpp  MarkerFragmentIndex.h  MarkerProjection.cpp  MarkerProjection.h  MathImageRenderer.cpp  MathImageRenderer.h  PartialDocumentPatchApplier.h  (+23 more)
tests/: CMakeLists.txt  TestUtils.h  test_parser.cpp  test_renderer.cpp
(+185 files in other folders)
